bootstrap coordinate systems
Implements the various coordinate systems used internally by H3.
This unlocks a good chunk of the H3 API, especially from/to `LatLng`
conversions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ categories = ["science"]
 all-features = true
 
 [dependencies]
+auto_ops = { version = "0.3", default-features = false }
 float_eq = { version = "1.0", default-features = false }
 
 [dev-dependencies]
