implement grid algorithms and LocalIJ coord system
Those two pieces unlock the rest of the indexes API.
We're almost there, only the geo part remains now.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ categories = ["science"]
 all-features = true
 
 [dependencies]
+ahash = { version = "0.8", default-features = false, features = ["std", "runtime-rng"] }
 auto_ops = { version = "0.3", default-features = false }
+either = { version = "1.0", default-features = false }
 float_eq = { version = "1.0", default-features = false }
 
 [dev-dependencies]
