--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,20 @@ categories = ["science"]
 [package.metadata.docs.rs]
 all-features = true
 
+[features]
+default = []
+geo = ["dep:geo", "dep:geojson"]
+
 [dependencies]
 ahash = { version = "0.8", default-features = false, features = ["std", "runtime-rng"] }
 auto_ops = { version = "0.3", default-features = false }
 either = { version = "1.0", default-features = false }
 float_eq = { version = "1.0", default-features = false }
+geo = { version = "0.23", optional = true, default-features = false }
+geojson = { version = "0.24", optional = true, default-features = false, features = ["geo-types"] }
 
 [dev-dependencies]
+approx = { version = "0.5", default-features = false }
 criterion = { version = "0.4", default-features = false, features = ["plotters", "cargo_bench_support", "html_reports"] }
 h3ron-h3-sys = { version = "0.15", default-features = false }
 
