--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ all-features = true
 [features]
 default = []
 geo = ["dep:geo", "dep:geojson"]
+serde = ["dep:serde", "dep:serde_repr"]
 
 [dependencies]
 ahash = { version = "0.8", default-features = false, features = ["std", "runtime-rng"] }
@@ -26,6 +27,8 @@ either = { version = "1.0", default-features = false }
 float_eq = { version = "1.0", default-features = false }
 geo = { version = "0.23", optional = true, default-features = false }
 geojson = { version = "0.24", optional = true, default-features = false, features = ["geo-types"] }
+serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
+serde_repr = { version = "0.1", optional = true, default-features = false }
 
 [dev-dependencies]
 approx = { version = "0.5", default-features = false }
