--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ serde = ["dep:serde", "dep:serde_repr"]
 
 [dependencies]
 ahash = { version = "0.8", default-features = false, features = ["std", "runtime-rng"] }
+arbitrary = { version = "1.0", optional = true, default-features = false }
 auto_ops = { version = "0.3", default-features = false }
 konst = { version = "0.3", default-features = false, features = ["parsing"] }
 either = { version = "1.0", default-features = false }
