--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ pre-release-replacements = [
 default = []
 geo = ["dep:geo", "dep:geojson"]
 serde = ["dep:serde", "dep:serde_repr"]
+tools = ["polyfit-rs"]
 
 [dependencies]
 ahash = { version = "0.8", default-features = false, features = ["std", "compile-time-rng"] }
@@ -37,6 +38,7 @@ either = { version = "1.0", default-features = false }
 float_eq = { version = "1.0", default-features = false }
 geo = { version = "0.26", optional = true, default-features = false }
 geojson = { version = "0.24", optional = true, default-features = false, features = ["geo-types"] }
+polyfit-rs = { version = "0.2", optional = true, default-features = false }
 serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
 serde_repr = { version = "0.1", optional = true, default-features = false }
 
@@ -49,6 +51,11 @@ h3ron-h3-sys = { version = "0.16", default-features = false }
 # doctests are good for docs, but unfortunately they are slow.
 # Cf. https://matklad.github.io/2021/02/27/delete-cargo-integration-tests.html
 doctest = false
+
+[[bin]]
+name = "average_edge_length"
+path = "tools/average_edge_length.rs"
+required-features = ["tools"]
 
 [[bench]]
 harness = false
