coord: expose LocalIJ::new and CoordIJ
This simplifies/makes possible use cases like
https://github.com/HydroniumLabs/h3o/issues/15

But now that user can create arbitrary local IJ coordinates, the code
that handles it must be more robust (hence the overflow handling, the
new test cases and the extra fuzz target).

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -92,6 +92,12 @@ test = false
 doc = false
 
 [[bin]]
+name = "local_ij"
+path = "fuzz_targets/local_ij.rs"
+test = false
+doc = false
+
+[[bin]]
 name = "polygon_to_cells"
 path = "fuzz_targets/polygon_to_cells.rs"
 test = false
