--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://docs.rs/h3o"
 repository = "https://github.com/HydroniumLabs/h3o"
 license = "BSD-3-Clause"
 keywords = ["geography", "geospatial", "gis", "h3", "spatial-index"]
-categories = ["science::geo"]
+categories = ["science::geo", "no-std"]
 
 [package.metadata.docs.rs]
 all-features = true
@@ -24,21 +24,22 @@ pre-release-replacements = [
 ]
 
 [features]
-default = []
+default = ["std"]
+std = ["dep:ahash"]
 geo = ["dep:geo", "dep:geojson"]
 serde = ["dep:serde", "dep:serde_repr"]
 tools = ["polyfit-rs"]
 
 [dependencies]
-ahash = { version = "0.8", default-features = false, features = ["std", "compile-time-rng"] }
+ahash = { version = "0.8", optional = true, default-features = false, features = ["std", "compile-time-rng"] }
 arbitrary = { version = "1.0", optional = true, default-features = false }
-auto_ops = { version = "0.3", default-features = false }
 konst = { version = "0.3", default-features = false, features = ["parsing"] }
 either = { version = "1.0", default-features = false }
 float_eq = { version = "1.0", default-features = false }
 geo = { version = "0.27", optional = true, default-features = false }
 geojson = { version = "0.24", optional = true, default-features = false, features = ["geo-types"] }
 h3o-bit = { version = "0.1", default-features = false }
+libm = { version = "0.2", default-features = false }
 polyfit-rs = { version = "0.2", optional = true, default-features = false }
 serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
 serde_repr = { version = "0.1", optional = true, default-features = false }
