--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "h3o"
-version = "0.6.4"
+version = "0.7.0"
 authors = ["Sylvain Laperche <sylvain.laperche@gmail.com>"]
 edition = "2021"
 description = "A Rust implementation of the H3 geospatial indexing system."
@@ -26,7 +26,7 @@ pre-release-replacements = [
 [features]
 default = ["std"]
 std = ["dep:ahash"]
-geo = ["dep:geo", "dep:geojson"]
+geo = ["dep:geo"]
 serde = ["dep:serde", "dep:serde_repr"]
 tools = ["polyfit-rs"]
 typed_floats = ["dep:typed_floats"]
@@ -37,7 +37,6 @@ arbitrary = { version = "1.0", optional = true, default-features = false }
 either = { version = "1.0", default-features = false }
 float_eq = { version = "1.0", default-features = false }
 geo = { version = "0.29", optional = true, default-features = false }
-geojson = { version = "0.24", optional = true, default-features = false, features = ["geo-types"] }
 h3o-bit = { version = "0.1", default-features = false }
 libm = { version = "0.2", default-features = false }
 polyfit-rs = { version = "0.2", optional = true, default-features = false }
@@ -48,6 +47,7 @@ typed_floats = { version = "1.0", optional = true, default-features = false }
 [dev-dependencies]
 approx = { version = "0.5", default-features = false }
 criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support", "html_reports"] }
+geojson = { version = "0.24", default-features = false, features = ["geo-types"] }
 h3ron-h3-sys = { version = "0.17", default-features = false }
 
 [lib]
