--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
           use-tool-cache: true
       - name: Generate test result and coverage report
         run: |
-          cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info;
+          cargo llvm-cov --features std,geo,serde,typed_floats --workspace --lcov --output-path lcov.info;
           rust-covfix -o lcov-fixed.info lcov.info
       - name: Upload to Codecov
         uses: codecov/codecov-action@v3
